--- a/css/styles.css
+++ b/css/styles.css
@@ -116,3 +116,6 @@ body {
     bottom: -50px;
     height: 50px;
     border-left: 2px silver solid; }
+  .service:nth-child(2)::after {
+    height: 105px;
+    bottom: -105px; }
