--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -131,3 +131,6 @@ body
         bottom: -50px
         height: 50px
         border-left: 2px $silver_line solid
+    &:nth-child(2)::after
+        height: 105px
+        bottom: -105px
