--- a/index.pug
+++ b/index.pug
@@ -39,3 +39,14 @@ html(lang="en")
                     h3 Development
                     p Truffaut DIY keffiyeh, twee messenger bag venmo locavore organic master cleanse marfa jochujang selvage.
                     a(href="#").btn.btn--highlight.btn--sm Learn More
+        section.past_work
+            .wrapper
+                h2.title Our Work
+                img(src="images/logos.png", alt="Past client").logos
+                ul.slider
+                    li
+                        img(src="https://source.unsplash.com/random", alt="Wordpress")
+                    li
+                        img(src="https://source.unsplash.com/random", alt="Amazon")
+                    li
+                        img(src="https://source.unsplash.com/random", alt="Netflix")
