--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -134,3 +134,48 @@ body
     &:nth-child(2)::after
         height: 105px
         bottom: -105px
+
+// Past work styles
+
+.past_work
+    background: $dark_grey
+    padding: 5rem 0 25rem
+    text-align: center
+    position: relative
+    overflow: hidden
+    .title
+        color: $white
+        font-size: 2.5rem
+        margin: 0 0 .75
+    .logos
+        width: 750px
+        max-width: 95%
+        
+.slider
+    list-style: none
+    li
+        width: 600px
+        height: 375px
+        overflow: hidden
+        background-color: $white
+        box-shadow: 0 0 57px 0 rgba(4,6,9, .25)
+        position: absolute
+        z-index: 3
+        border-radius: .35rem .35rem 0 0
+        img
+            width: 100%
+        &:nth-child(1)
+            bottom: -37px
+            left: 0
+            transform: scale(.8, .8)
+            z-index: 2
+        &:nth-child(2)
+            left: 50%
+            margin-left: -300px
+            z-index: 4
+            bottom: 0
+        &:nth-child(3)
+            bottom: -37px
+            right: 0
+            transform: scale(.8, .8)
+            z-index: 2
