finish past_work section

--- a/index.pug
+++ b/index.pug
@@ -43,6 +43,13 @@ html(lang="en")
             .wrapper
                 h2.title Our Work
                 img(src="images/logos.png", alt="Past client").logos
+                ul.slider_buttons
+                    a(href="#")
+                        li.current
+                    a(href="#")
+                        li
+                    a(href="#")
+                        li
                 ul.slider
                     li
                         img(src="https://source.unsplash.com/random", alt="Wordpress")
